--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -18,7 +18,7 @@
         <img src="/assets/logo.png" alt="logo-belavia" class="logo">
         <nav class="menu-nav">
             <ul class="menu-list">
-                <li class="menu-item"> <a href="index.html">Home</a> </li>
+                <li class="menu-item"> <a href="../index.html">Home</a> </li>
                 <li class="menu-item"> <a href="sobre.html">Sobre</a> </li>
                 <li class="menu-item"> <a href=""> Serviços</a> </li>
                 <li class="menu-item"> <a href="https://www.instagram.com/belaviaestetica?igsh=MXZ5YmRqZHBmaXZ5bA==" target="_blank" title="Instagram"><i class="fa-brands fa-instagram"></i></a> </li>
