--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="menu-nav">
             <ul class="menu-list">
                 <li class="menu-item"> <a href="index.html">Home</a> </li>
-                <li class="menu-item"> <a href="sobre.html" target="_self">Sobre</a> </li>
+                <li class="menu-item"> <a href="/HTML/sobre.html" target="_self">Sobre</a> </li>
                 <li class="menu-item"> <a href=""> Serviços</a> </li>
                 <li class="menu-item"> <a href="https://www.instagram.com/belaviaestetica?igsh=MXZ5YmRqZHBmaXZ5bA==" target="_blank" title="Instagram"><i class="fa-brands fa-instagram"></i></a> </li>
             </ul>
