ready for deploy

--- a/HTML/sobre.html
+++ b/HTML/sobre.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belavia Estética Avançada</title>
+    <title>Sobre | Belavia Estética Avançada</title>
 
     
-    <link rel="stylesheet" href="/CSS/sobre.css">
-    <link rel="stylesheet" href="/CSS/normalize.css">
+    <link rel="stylesheet" href="../CSS/sobre.css">
+    <link rel="stylesheet" href="../CSS/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f0a0628dbf.js" crossorigin="anonymous"></script>
@@ -15,12 +15,12 @@
 <body>
 
     <header class="menu-container">
-        <img src="/assets/logo.png" alt="logo-belavia" class="logo">
+        <img src="../assets/logo.png" alt="logo-belavia" class="logo">
         <nav class="menu-nav">
             <ul class="menu-list">
                 <li class="menu-item"> <a href="../index.html">Home</a> </li>
                 <li class="menu-item"> <a href="sobre.html">Sobre</a> </li>
-                <li class="menu-item"> <a href=""> Serviços</a> </li>
+                <li class="menu-item"> <a href="../HTML/servivos.html"> Serviços</a> </li>
                 <li class="menu-item"> <a href="https://www.instagram.com/belaviaestetica?igsh=MXZ5YmRqZHBmaXZ5bA==" target="_blank" title="Instagram"><i class="fa-brands fa-instagram"></i></a> </li>
             </ul>
         </nav>
@@ -44,7 +44,7 @@
 
         <section class="secao-dani">
             <div class="dani-container">
-                <img src="/assets/daniela.jpg" alt="imagem-daniela" class="dani-img">
+                <img src="../assets/daniela.jpg" alt="imagem-daniela" class="dani-img">
                 <p class="apresentacao-dani">Daniela Lopes Ferreira é uma mulher cheia  de       energia, apaixonada por transformar vidas! Enfermeira esteta e pós-graduada em enfermagem estética, ela é a prova de que é possível unir o cuidado com a saúde ao desejo de se sentir bem consigo mesma. Além de ser especialista no que faz, a Daniela é uma verdadeira crossfiteira, mãe e esposa — e sabe como é difícil conciliar tudo isso com a rotina intensa!
                 Com uma experiência ampla na área de estética, o que mais a motiva é ver a transformação que ela consegue proporcionar aos seus clientes. Para Daniela, não se trata apenas de procedimentos, mas de garantir que cada pessoa que a procura saia não só com o melhor resultado estético, mas também com a confiança renovada. Ela acredita que a verdadeira beleza vem de dentro, e seu objetivo é fazer com que cada cliente se sinta bem consigo mesmo, por dentro e por fora.
                 </p>
@@ -55,10 +55,15 @@
             <div class="samira-container">
                 <p class="apresentacao-samira">Samira Neder Borges tem uma história igualmente inspiradora. Ela é farmacêutica e especialista em estética avançada, mas não se resume a isso. Ela também é mãe, esposa e sabe que, assim como qualquer pessoa, enfrenta os desafios diários para equilibrar todos os papéis que assume. O que mais a motiva, além de ajudar as pessoas a se sentirem mais confiantes, é ver como a estética avançada pode melhorar não só a aparência, mas também a autoestima.
                 Com um olhar atento às tendências e inovações do mercado, Samira traz para cada atendimento a confiança e o cuidado que só quem realmente ama o que faz consegue oferecer. Ela acredita que cada pessoa é única, e é essa individualidade que ela busca valorizar em cada procedimento.</p>
-                 <img src="/assets/samira.jpg" alt="imagem-samira" class="samira-img">
+                 <img src="../assets/samira.jpg" alt="imagem-samira" class="samira-img">
             </div>
         </section>  
     </main>
+    
+    <footer class="rodape">
+        <p>Desenvolvido por</p>
+        <p>&copy; 2025 Guilherme Oliveira</p>
+    </footer>
 
-    <script src="/JavaScript/efeitos.js"></script>
+    <script src="../JavaScript/efeitos.js"></script>
 </body>
