--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Belavia Estética Avançada</title>
+    <title>Home | Belavia Estética Avançada</title>
 
-    <link rel="stylesheet" href="/CSS/index.css">
-    <link rel="stylesheet" href="/CSS/normalize.css">
+    <link rel="stylesheet" href="./CSS/index.css">
+    <link rel="stylesheet" href="./CSS/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f0a0628dbf.js" crossorigin="anonymous"></script>
@@ -14,12 +14,12 @@
 <body>
     
     <header class="menu-container">
-        <img src="/assets/logo.png" alt="logo-belavia" class="logo">
+        <img src="../assets/logo.png" alt="logo-belavia" class="logo">
         <nav class="menu-nav">
             <ul class="menu-list">
                 <li class="menu-item"> <a href="index.html">Home</a> </li>
-                <li class="menu-item"> <a href="/HTML/sobre.html" target="_self">Sobre</a> </li>
-                <li class="menu-item"> <a href=""> Serviços</a> </li>
+                <li class="menu-item"> <a href="./HTML/sobre.html" target="_self">Sobre</a> </li>
+                <li class="menu-item"> <a href="./HTML/servicos.html"> Serviços</a> </li>
                 <li class="menu-item"> <a href="https://www.instagram.com/belaviaestetica?igsh=MXZ5YmRqZHBmaXZ5bA==" target="_blank" title="Instagram"><i class="fa-brands fa-instagram"></i></a> </li>
             </ul>
         </nav>
@@ -38,23 +38,22 @@
 
         <section class="service-cards">
             <div class="procedures-cards">
-                <img src="/assets/seringa-botox.png" alt="botox">
-                <img src="/assets/facial.png" alt="harmonizacao-facial">
-                <img src="/assets/gluteos.png" alt="harmonizacao-de-gluteos">
-                <img src="/assets/perda-de-peso.png" alt="perda-de-peso">
+                <img src="./assets/seringa-botox.png" alt="botox">
+                <img src="./assets/facial.png" alt="harmonizacao-facial">
+                <img src="./assets/gluteos.png" alt="harmonizacao-de-gluteos">
+                <img src="./assets/perda-de-peso.png" alt="perda-de-peso">
             </div>
         </section>
 
         <section class="map-container">
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4719.872821094001!2d-41.967365423935306!3d-18.847191182310763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb1a6fb856bc76b%3A0x9902e0f273beea6!2sR.%20Jo%C3%A3o%20de%20Barro%2C%20187%20-%20Lagoa%20Santa%2C%20Gov.%20Valadares%20-%20MG%2C%2035065-122%2C%20Brasil!5e1!3m2!1spt-BR!2sus!4v1760740092309!5m2!1spt-BR!2sus" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
-
-        <footer class="rodape">
-            <p>Desenvolvido por</p>
-            <p>Guilherme Oliveira &copy</p>
-        </footer>
     </main>
+    <footer class="rodape">
+        <p>Desenvolvido por</p>
+        <p>&copy; 2025 Guilherme Oliveira</p>
+    </footer>
 
-    <script src="/JavaScript/efeitos.js"></script>
+    <script src="./JavaScript/efeitos.js"></script>
 </body>
 </html>
