--- a/index.html
+++ b/index.html
@@ -27,12 +27,20 @@
 
     <main class="main-content">
         <section class="banner">
-            <div class="main-title">
-                <h1><b class="nome-clinica">Belavia</b> Estética Avançada</h1>
+
+            <div class="main-title-container">
+
+                <div class="main-title">
+                    <h1><b class="nome-clinica">Belavia</b> Estética Avançada</h1>
+                </div>
+
+                <div class="button-container">
+                    <a class="avaliacao-btn" href="https://wa.me/5533984618919?text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20avaliação." target="_blank">Agende sua avaliação</a>
+                </div>
             </div>
 
-            <div class="avaliacao-btn">
-                <a href="https://wa.me/5533984618919?text=Olá!%20Eu%20gostaria%20de%20agendar%20uma%20avaliação." target="_blank">Agende sua avaliação</a>
+            <div class="main-image-container">
+                <img src="assets/imagem-rosto-mulher-editado.png" alt="rosto-mulher">
             </div>
         </section>
 
